--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             i know you liked that cause you put it on your story, the one with the "Hi Zea Rain" hehe. i know my drawing isn't very good, but i think it's cute enough. i'll get better at drawing so i can make more for you to keep!
         </p>
         <p style="text-align: center; color: #f7f00f; margin-left: 50px; margin-right: 50px; font-size: 12px; margin-top: 70px;">
-            i recently learned that you dislike "zea." i think your whole name is very pretty. i love zea. i love rainah. i love you hehehhehehe &le;3 loving you is a privilege that i am grateful to experience. thank you for allowing me to do so. i'm thankful that 
+            i recently learned that you dislike "zea." i think your whole name is very pretty. i love zea. i love rainah. i love you hehehhehehe &lt;3 loving you is a privilege that i am grateful to experience. thank you for allowing me to do so. i'm thankful that 
             i get to be in your life. ever since you entered my life, it's been sooooo amazing. i wouldn't have it any other way. it's so easy loving you, baby. i know we've had rough patches, but that's nothing compared to the memories we've made over the past two months. 
             i'm happy and contented with you, with us. i'm glad that i'm the person who gets to have someone as amazing and beautiful as you, as kind and gentle, sweet and loving as you are. whenever i'm tired, i look for you. you lift the heavy things i feel with ease, 
             just one text from you and i immediately feel so much better. knowing i have someone that loves me for who i am is the best feeling in the world. i don't want this feeling to end, so let's do our best to keep loving each other through all the hard times okay? 
